--- a/main.css
+++ b/main.css
@@ -1,14 +1,16 @@
-hr {
-	width: 100%;
-	height: 30px;
-	background-color: #006680;
+
+
+.topnav {
+  overflow: hidden;
+  background-color: #006680;
+  margin-bottom: 10px;
 }
 
 body {
   background-color: #ffffff;
 }
 
-div {
+.project {
   	list-style-type: none;
   	margin: 0;
   	padding: 0;
@@ -16,6 +18,29 @@ div {
   	background-color: #e6f5ff;
   	margin-top:20px;
   	box-shadow: 10px 10px 5px grey;
+    overflow: auto;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #006680;
+  color: black;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+  background-color: #e6f5ff;
+  color: Black;
 }
 
 div:hover {
@@ -38,6 +63,15 @@ p {
 	border-radius: 4px;
 } 
 
+.homeProjectImages {
+  width: 125px;
+  height: 125px;
+  border-radius: 4px;
+  display: block;
+  float: right;
+  padding: 5px;
+} 
+
 .title {
   	display: block;
   	color: #000;
@@ -50,7 +84,7 @@ p {
 .day {
   	display: block;
   	color: #000;
-	padding: 8px 16px;
+    padding: 8px 16px;
   	text-decoration: none;
   	font-size: 14px;
 }
